// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`node icon render custom class 1`] = `

<div>
  <svg
    xmlns="http://www.w3.org/2000/svg"
    width="24"
    height="24"
    viewbox="0 0 24 24"
    fill="none"
    stroke="currentColor"
    stroke-width="2"
    stroke-linecap="round"
    stroke-linejoin="round"
    class="lucide lucide-node lucide-Node custom-class"
    aria-hidden="true"
  >
    <path
      d="M12.2383 2.12831C11.9408 1.96103 11.5877 1.96103 11.2902 2.12831L3.46471 6.64525C3.16727 6.81252 3 7.12851 3 7.46306V16.5154C3 16.85 3.1859 17.166 3.46471 17.3333L11.2902 21.8502C11.5877 22.0175 11.9408 22.0175 12.2383 21.8502L20.0638 17.3333C20.3612 17.166 20.5285 16.85 20.5285 16.5154V7.46306C20.5285 7.12851 20.3426 6.81252 20.0638 6.64525L12.2383 2.12831Z"
      fill="#418A3E"
      stroke-width="0"
    >
    </path>
    <path
      d="M11.9782 2.03566C12.0524 2.05428 12.1451 2.09137 12.2193 2.12838L20.0827 6.64531C20.157 6.701 20.2309 6.75716 20.2867 6.83146L12.0153 21.962C11.7737 22.0364 11.513 21.9994 11.2899 21.8693L3.42723 17.3524C3.33447 17.2966 3.24193 17.222 3.16761 17.1292L11.9782 2.03566Z"
      fill="#3B7B39"
      stroke-width="0"
    >
    </path>
    <path
      d="M20.101 17.3334C20.3241 17.2033 20.4913 16.9802 20.5657 16.7386L11.9409 2.01692C11.7178 1.97974 11.4761 1.9983 11.2717 2.12839L3.46467 6.62678L11.8851 21.9805C11.9966 21.9619 12.1268 21.9247 12.2383 21.8689L20.101 17.3334Z"
      fill="#66B848"
      stroke-width="0"
    >
    </path>
  </svg>
</div>

`;

exports[`node icon render default 1`] = `

<div>
  <svg
    xmlns="http://www.w3.org/2000/svg"
    width="24"
    height="24"
    viewbox="0 0 24 24"
    fill="none"
    stroke="currentColor"
    stroke-width="2"
    stroke-linecap="round"
    stroke-linejoin="round"
    class="lucide lucide-node lucide-Node"
    aria-hidden="true"
  >
    <path
      d="M12.2383 2.12831C11.9408 1.96103 11.5877 1.96103 11.2902 2.12831L3.46471 6.64525C3.16727 6.81252 3 7.12851 3 7.46306V16.5154C3 16.85 3.1859 17.166 3.46471 17.3333L11.2902 21.8502C11.5877 22.0175 11.9408 22.0175 12.2383 21.8502L20.0638 17.3333C20.3612 17.166 20.5285 16.85 20.5285 16.5154V7.46306C20.5285 7.12851 20.3426 6.81252 20.0638 6.64525L12.2383 2.12831Z"
      fill="#418A3E"
      stroke-width="0"
    >
    </path>
    <path
      d="M11.9782 2.03566C12.0524 2.05428 12.1451 2.09137 12.2193 2.12838L20.0827 6.64531C20.157 6.701 20.2309 6.75716 20.2867 6.83146L12.0153 21.962C11.7737 22.0364 11.513 21.9994 11.2899 21.8693L3.42723 17.3524C3.33447 17.2966 3.24193 17.222 3.16761 17.1292L11.9782 2.03566Z"
      fill="#3B7B39"
      stroke-width="0"
    >
    </path>
    <path
      d="M20.101 17.3334C20.3241 17.2033 20.4913 16.9802 20.5657 16.7386L11.9409 2.01692C11.7178 1.97974 11.4761 1.9983 11.2717 2.12839L3.46467 6.62678L11.8851 21.9805C11.9966 21.9619 12.1268 21.9247 12.2383 21.8689L20.101 17.3334Z"
      fill="#66B848"
      stroke-width="0"
    >
    </path>
  </svg>
</div>

`;
